# systemprog

./: linkedlist.cpp  main.cpp  main.ii  main.s  sum.ii  sum.s  test
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  main.cpp  min.cpp  square.cpp  test
hom_1/: .rev_arr.cpp.swp  a.out  count_char.cpp  mergqarr.cpp  rev_arr.cpp
